--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </header>
 
         <div class="search-box">
-            <input type="number" id="searchInput" placeholder="Enter mobile number...">
+            <input type="number" id="searchInput" placeholder="Enter mobile number without 0...">
             <button onclick="fetchData()">
                 <i class="fas fa-search"></i>
                 Search
