--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number Search | Shakeel Khan</title>
+    <title>Shakeel | Number Lookup</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary: #2563eb;
-            --secondary: #1e40af;
-            --gradient: linear-gradient(135deg, #2563eb, #1e40af);
+            --primary: #7c3aed;
+            --secondary: #4f46e5;
+            --accent: #f472b6;
+            --gradient: linear-gradient(135deg, #7c3aed, #4f46e5);
+            --glass: rgba(255, 255, 255, 0.95);
         }
 
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Segoe UI', sans-serif;
+            font-family: 'Poppins', sans-serif;
         }
 
         body {
@@ -24,85 +27,127 @@
             min-height: 100vh;
             display: grid;
             place-items: center;
-            padding: 20px;
+            padding: 2rem;
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
+        }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         .container {
-            background: rgba(255, 255, 255, 0.95);
+            background: var(--glass);
+            backdrop-filter: blur(10px);
             width: 100%;
-            max-width: 600px;
-            padding: 2rem;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            max-width: 800px;
+            padding: 2.5rem;
+            border-radius: 2rem;
+            box-shadow: 0 8px 32px rgba(0,0,0,0.1);
+            border: 1px solid rgba(255,255,255,0.2);
             transform: translateY(0);
-            animation: float 3s ease-in-out infinite;
+            animation: float 4s ease-in-out infinite;
         }
 
         @keyframes float {
             0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
+            50% { transform: translateY(-15px); }
         }
 
         header {
             text-align: center;
-            margin-bottom: 2rem;
+            margin-bottom: 2.5rem;
             position: relative;
         }
 
         .logo {
-            font-size: 2.5rem;
+            font-size: 3rem;
             background: var(--gradient);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            animation: glow 2s ease-in-out infinite;
+            font-weight: 700;
+            letter-spacing: -1px;
+            position: relative;
+            display: inline-block;
         }
 
-        @keyframes glow {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.8; }
+        .logo::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 60%;
+            height: 3px;
+            background: var(--gradient);
+            border-radius: 2px;
         }
 
         .search-box {
             display: flex;
-            gap: 10px;
-            margin-bottom: 1.5rem;
+            gap: 1rem;
+            margin-bottom: 2rem;
+            flex-wrap: wrap;
+        }
+
+        .input-group {
+            flex: 1;
+            position: relative;
         }
 
         input {
-            flex: 1;
-            padding: 1rem;
-            border: 2px solid #e5e7eb;
-            border-radius: 10px;
-            font-size: 1rem;
+            width: 100%;
+            padding: 1.2rem;
+            border: 2px solid #e9d5ff;
+            border-radius: 1rem;
+            font-size: 1.1rem;
             transition: all 0.3s ease;
+            background: rgba(255,255,255,0.9);
+            padding-left: 3rem;
         }
 
         input:focus {
             border-color: var(--primary);
             outline: none;
-            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
+            box-shadow: 0 0 0 3px rgba(124, 58, 237, 0.2);
+        }
+
+        .input-icon {
+            position: absolute;
+            left: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+            color: var(--primary);
+            font-size: 1.2rem;
         }
 
         button {
             background: var(--gradient);
             color: white;
             border: none;
-            padding: 0 2rem;
-            border-radius: 10px;
+            padding: 0 2.5rem;
+            border-radius: 1rem;
             cursor: pointer;
             font-weight: 600;
-            transition: transform 0.2s ease;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 0.8rem;
+            font-size: 1.1rem;
         }
 
         button:hover {
             transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(124, 58, 237, 0.3);
         }
 
         .result {
             background: white;
-            padding: 1.5rem;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            padding: 2rem;
+            border-radius: 1.5rem;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.05);
             opacity: 0;
             transform: translateY(20px);
             animation: fadeIn 0.5s ease forwards;
@@ -113,89 +158,143 @@
         }
 
         .data-item {
-            margin: 1rem 0;
-            padding: 1rem;
+            margin: 1.2rem 0;
+            padding: 1.5rem;
             background: #f8fafc;
-            border-radius: 8px;
+            border-radius: 1rem;
+            position: relative;
+            overflow: hidden;
+            transition: transform 0.3s ease;
+        }
+
+        .data-item:hover {
+            transform: translateX(10px);
+        }
+
+        .data-item::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 100%;
+            width: 4px;
+            background: var(--primary);
         }
 
         .data-item strong {
             color: var(--primary);
             display: block;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.8rem;
+            font-size: 0.9rem;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         .powered-by {
             position: fixed;
-            bottom: 20px;
+            bottom: 1.6rem;
             left: 50%;
             transform: translateX(-50%);
-            color: white;
+            color: rgb(194, 22, 22);
             font-size: 2rem;
-            opacity: 0.8;
+            opacity: 0.9;
+            text-align: center;
+            background: rgba(255,255,255,0.1);
+            padding: 0.8rem 1.5rem;
+            border-radius: 2rem;
+            backdrop-filter: blur(5px);
             animation: slideIn 1s ease;
-        }
-
-        @keyframes slideIn {
-            from { transform: translate(-50%, 100%); }
-            to { transform: translate(-50%, 0); }
         }
 
         .telegram-link {
             display: inline-flex;
             align-items: center;
-            gap: 8px;
+            gap: 0.8rem;
             color: white;
             text-decoration: none;
             position: fixed;
-            top: 20px;
-            right: 20px;
-            padding: 8px 16px;
-            border-radius: 8px;
-            background: #0088cc;
-            transition: transform 0.2s ease;
+            top: 2rem;
+            right: 2rem;
+            padding: 0.8rem 1.5rem;
+            border-radius: 2rem;
+            background: rgba(0, 136, 204, 0.9);
+            backdrop-filter: blur(5px);
+            transition: all 0.3s ease;
+            border: 1px solid rgba(255,255,255,0.2);
         }
 
         .telegram-link:hover {
             transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0,136,204,0.3);
         }
 
         .loading {
             text-align: center;
-            padding: 1rem;
+            padding: 2rem;
             color: var(--primary);
+            display: none;
         }
 
         .loading i {
             animation: spin 1s linear infinite;
+            font-size: 2rem;
+            margin-bottom: 1rem;
         }
 
-        @keyframes spin {
-            to { transform: rotate(360deg); }
+        @media (max-width: 768px) {
+            .container {
+                padding: 1.5rem;
+                border-radius: 1.5rem;
+            }
+
+            .search-box {
+                flex-direction: column;
+            }
+
+            button {
+                width: 100%;
+                justify-content: center;
+                padding: 1.2rem;
+            }
+
+            .telegram-link {
+                top: 1rem;
+                right: 1rem;
+                font-size: 0.9rem;
+            }
+
+            .powered-by {
+                bottom: 1rem;
+                width: 90%;
+            }
         }
     </style>
 </head>
 <body>
     <a href="https://t.me/ShakeelAhmad09" class="telegram-link" target="_blank">
         <i class="fab fa-telegram"></i>
-        Join Telegram
+        Join Channel
     </a>
 
     <div class="container">
         <header>
-            <h1 class="logo">Shakeel Sim Data Finder</h1>
+            <h1 class="logo">Shakeel Data Finder </h1>
         </header>
 
         <div class="search-box">
-            <input type="number" id="searchInput" placeholder="Enter mobile number without 0...">
+            <div class="input-group">
+                <i class="fas fa-mobile-alt input-icon"></i>
+                <input type="number" id="searchInput" placeholder="Enter mobile number without 0...">
+            </div>
             <button onclick="fetchData()">
                 <i class="fas fa-search"></i>
-                Search
+                Search Now
             </button>
         </div>
 
         <div class="loading" id="loading">
-            <i class="fas fa-spinner"></i> Loading...
+            <i class="fas fa-spinner"></i>
+            <div>Searching our database...</div>
         </div>
 
         <div class="result" id="result"></div>
@@ -206,21 +305,23 @@
     </div>
 
     <script>
+        // Previous JavaScript code with improved error handling
         async function fetchData() {
             const number = document.getElementById('searchInput').value;
             const resultDiv = document.getElementById('result');
             const loadingDiv = document.getElementById('loading');
 
-            if(!number) {
-                alert('Please enter a valid number');
+            if(!number || number.length < 10) {
+                showError('Please enter a valid 10-digit number');
                 return;
             }
 
             try {
                 resultDiv.innerHTML = '';
-                loadingDiv.style.display = 'block';
+                loadingDiv.style.display = 'flex';
+                loadingDiv.style.flexDirection = 'column';
+                loadingDiv.style.alignItems = 'center';
                 
-                // Using CORS proxy
                 const proxyUrl = 'https://api.allorigins.win/raw?url=';
                 const apiUrl = `http://tmphpscripts.xyz/Tajammal.php?num=${number}`;
                 
@@ -236,7 +337,7 @@
                 }
             } catch (err) {
                 loadingDiv.style.display = 'none';
-                showError('Failed to fetch data');
+                showError('Failed to fetch data. Please try again.');
                 console.error(err);
             }
         }
@@ -244,30 +345,36 @@
         function formatData(data) {
             return `
                 <div class="data-item">
-                    <strong>Mobile Number:</strong> ${data["Mobile #"]}
+                    <strong>Mobile Number</strong>
+                    ${data["Mobile #"]}
                 </div>
                 <div class="data-item">
-                    <strong>Name:</strong> ${data.Name}
+                    <strong>Full Name</strong>
+                    ${data.Name}
                 </div>
                 <div class="data-item">
-                    <strong>CNIC:</strong> ${data.CNIC}
+                    <strong>CNIC Number</strong>
+                    ${data.CNIC}
                 </div>
                 <div class="data-item">
-                    <strong>Address:</strong> ${data.Address}
+                    <strong>Registered Address</strong>
+                    ${data.Address}
                 </div>
                 <div class="data-item">
-                    <strong>Operator:</strong> ${data.Operator}
+                    <strong>Service Provider</strong>
+                    ${data.Operator}
                 </div>
             `;
         }
 
         function showError(message) {
-            const errorDiv = document.createElement('div');
-            errorDiv.className = 'data-item';
-            errorDiv.style.background = '#fee2e2';
-            errorDiv.style.color = '#dc2626';
-            errorDiv.innerHTML = `<strong>Error:</strong> ${message}`;
-            document.getElementById('result').appendChild(errorDiv);
+            const errorHTML = `
+                <div class="data-item" style="background: #fee2e2; color: #dc2626;">
+                    <strong>ERROR</strong>
+                    ${message}
+                </div>
+            `;
+            document.getElementById('result').innerHTML = errorHTML;
         }
     </script>
 </body>
