--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <div class="container1">
         <div class="button-container">
             <button class="button" onclick="sendMessage()">Owner Shakeel Khan</button>
-            <button class="button" onclick="window.open('https://t.me/ShakeelAhmad09', '_blank')">Wa Channel</button>
+            <button class="button" onclick="window.open('https://t.me/ShakeelAhmad09', '_blank')">Telegram Channel</button>
             <button class="button" onclick="openSecondScript3()">Gemini AI</button>
         </div>
         <p>©darkdevel</p>
