--- a/index.html
+++ b/index.html
@@ -3,175 +3,178 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fam ofc sim</title>
+    <title>Fam Ofc Sim</title>
     <link rel="icon" href="./fampng/faheem.png" type="image/png">
     <style>
+        /* Hacker-Themed Background */
         body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #f06, #48f, #f8e, #48f);
+            font-family: 'Courier New', monospace;
+            background: #000;
+            color: #00ff00;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            text-shadow: 0 0 5px #00ff00, 0 0 10px #008000;
         }
 
-        .container, .container1 {
+        .container {
             width: 90%;
             max-width: 600px;
             padding: 20px;
-            background: #fff;
-            border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            background: rgba(0, 0, 0, 0.8);
+            border: 2px solid #00ff00;
+            border-radius: 10px;
+            box-shadow: 0 0 15px #00ff00;
             margin-top: 20px;
             text-align: center;
         }
 
         h1 {
-            color: #000;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
+            color: #00ff00;
+            text-shadow: 0 0 10px #00ff00;
         }
 
         input[type="text"], input[type="submit"] {
             padding: 12px;
             margin: 10px 0;
-            border: 1px solid #ccc;
+            border: 1px solid #00ff00;
             border-radius: 8px;
             font-size: 16px;
+            background: black;
+            color: #00ff00;
+            text-align: center;
+            box-shadow: 0 0 10px #00ff00;
         }
 
         input[type="submit"] {
-            background: #000;
-            color: #fff;
+            background: #00ff00;
+            color: black;
+            font-weight: bold;
             cursor: pointer;
-            border: none;
+            transition: 0.3s;
         }
 
-        input[type="text"]:focus, input[type="submit"]:hover {
-            box-shadow: inset 0 6px 8px rgba(0, 0, 0, 0.2);
+        input[type="submit"]:hover {
+            background: black;
+            color: #00ff00;
+            border: 1px solid #00ff00;
         }
 
         .loader, .error {
             display: none;
             font-weight: bold;
             margin-top: 10px;
+            text-align: center;
         }
 
-        .loader { font-size: 18px; text-align: center; }
-        .error { color: red; text-align: center; }
-
-        .table-container {
-            overflow-x: auto;
-            margin-top: 20px;
-            width: 100%;
+        .loader {
+            font-size: 18px;
+            animation: flicker 1.5s infinite alternate;
         }
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            min-width: 320px;
+        .error {
+            color: red;
+            text-shadow: 0 0 5px red;
+        }
+
+        @keyframes flicker {
+            0% { opacity: 1; }
+            100% { opacity: 0.5; }
+        }
+
+        /* Grid Layout for API Response */
+        .grid-container {
             display: none;
+            width: 90%;
+            max-width: 600px;
+            margin-top: 20px;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.8);
+            border: 2px solid #00ff00;
+            border-radius: 10px;
+            box-shadow: 0 0 15px #00ff00;
         }
 
-        th, td {
-            padding: 12px;
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
             text-align: left;
-            border: 1px solid #ccc;
+            padding: 10px;
         }
 
-        th {
-            background: #000;
-            color: #fff;
+        .grid-item {
+            padding: 10px;
+            background: black;
+            border: 1px solid #00ff00;
+            border-radius: 5px;
+            box-shadow: 0 0 8px #00ff00;
         }
 
-        tr:nth-child(even) { background: #f0f0f0; }
-        tr:hover { background-color: #e0e0e0; }
+        .grid-item strong {
+            color: #00ff00;
+        }
 
         .button-container {
+            margin-top: 20px;
             display: flex;
-            flex-direction: column;
             gap: 10px;
-            margin-top: 10px;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         .button {
-            padding: 12px;
-            border: none;
-            border-radius: 50px;
-            background: linear-gradient(45deg, #48c, #f06);
-            color: white;
-            font-size: 16px;
+            padding: 10px 20px;
+            border: 2px solid #00ff00;
+            background: black;
+            color: #00ff00;
             cursor: pointer;
-            transition: transform 0.2s;
-            width: 100%;
+            transition: 0.3s;
+            font-size: 16px;
+            text-shadow: 0 0 5px #00ff00;
         }
 
-        .button:hover { transform: scale(1.05); }
-        .button:active { transform: scale(0.95); }
-
-        @media (min-width: 600px) {
-            .button-container { flex-direction: row; justify-content: space-between; }
-            .button { width: auto; padding: 12px 20px; }
+        .button:hover {
+            background: #00ff00;
+            color: black;
         }
 
         @media (max-width: 600px) {
-            table {
-                font-size: 14px;
-                margin-top: 10px;
-            }
-
-            th, td {
-                padding: 10px;
-            }
-
-            .button-container {
-                flex-direction: column;
+            .grid {
+                grid-template-columns: 1fr;
             }
         }
     </style>
 </head>
 <body>
+
     <div class="container">
-        <img src="img.jpeg" style="width:80px; height:80px; border-radius:50%; border:2px solid blue; box-shadow:0 0 15px blue;">
-        <h1> DEVEL Shakeel<br>SIM DATABASE</h1>
+        <img src="img.jpeg" style="width:80px; height:90px; border-radius:60%; border:2px solid blue; box-shadow:0 0 15px blue;">
+        <h1>★彡[ꜱʜᴀᴋᴇᴇʟ ᴋʜᴀɴ]彡★</h1>
 
         <form id="queryForm">
-            <label for="query">Enter your NUMBER </label>
-            <input type="text" id="query" placeholder="without 0" name="query" required>
+            <label for="query">Enter your NUMBER</label>
+            <input type="text" id="query" placeholder="without 0" required>
             <input type="submit" value="Submit">
         </form>
 
         <div id="loader" class="loader">Fetching data...</div>
         <div id="error" class="error"></div>
-
-        <div class="table-container">
-            <table id="resultTable">
-                <thead>
-                    <tr>
-                        <th>Mobile #</th>
-                        <th>Name</th>
-                        <th>CNIC</th>
-                        <th>Address</th>
-                        <th>Operator</th>
-                    </tr>
-                </thead>
-                <tbody id="tableBody"></tbody>
-            </table>
-        </div>
     </div>
 
-    <div class="container1">
-        <div class="button-container">
-            <button class="button" onclick="sendMessage()">Owner Shakeel Khan</button>
-            <button class="button" onclick="window.open('https://t.me/ShakeelAhmad09', '_blank')">Telegram Channel</button>
-            <button class="button" onclick="openSecondScript3()">Gemini AI</button>
-        </div>
-        <p>©darkdevel</p>
+    <div id="resultContainer" class="grid-container">
+        <h2 style="text-align: center;">SIM Details</h2>
+        <div class="grid" id="resultGrid"></div>
+    </div>
+
+    <div class="button-container">
+        <button class="button" onclick="window.open('https://t.me/Ms_pro_dev', '_blank')">Owner Shakeel</button>
+        <button class="button" onclick="window.open('https://t.me/ShakeelAhmad09', '_blank')">Wa Channel</button>
+        <button class="button" onclick="openSecondScript3()">Gemini AI</button>
     </div>
 
     <script>
@@ -187,7 +190,7 @@
             
             document.getElementById('loader').style.display = 'block';
             document.getElementById('error').style.display = 'none';
-            document.getElementById('resultTable').style.display = 'none';
+            document.getElementById('resultContainer').style.display = 'none';
 
             try {
                 const response = await fetch(proxyUrl + encodeURIComponent(apiUrl));
@@ -199,7 +202,7 @@
                     showError(data.error || 'No data found.');
                 } else {
                     displayResults(Array.isArray(data) ? data[0] : data);
-                    document.getElementById('resultTable').style.display = 'table';
+                    document.getElementById('resultContainer').style.display = 'block';
                 }
             } catch (err) {
                 showError('Failed to fetch data. Please try again.');
@@ -210,14 +213,13 @@
         }
 
         function displayResults(data) {
-            document.getElementById('tableBody').innerHTML = `
-                <tr>
-                    <td>${data["Mobile #"] || 'N/A'}</td>
-                    <td>${data.Name || 'N/A'}</td>
-                    <td>${data.CNIC || 'N/A'}</td>
-                    <td>${data.Address || 'N/A'}</td>
-                    <td>${data.Operator || 'N/A'}</td>
-                </tr>
+            const resultGrid = document.getElementById('resultGrid');
+            resultGrid.innerHTML = `
+                <div class="grid-item"><strong>Mobile #:</strong> ${data["Mobile #"] || 'N/A'}</div>
+                <div class="grid-item"><strong>Name:</strong> ${data.Name || 'N/A'}</div>
+                <div class="grid-item"><strong>CNIC:</strong> ${data.CNIC || 'N/A'}</div>
+                <div class="grid-item"><strong>Address:</strong> ${data.Address || 'N/A'}</div>
+                <div class="grid-item"><strong>Operator:</strong> ${data.Operator || 'N/A'}</div>
             `;
         }
 
@@ -227,5 +229,6 @@
             errorDiv.textContent = message;
         }
     </script>
+
 </body>
 </html>
