--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <div class="container">
         <img src="img.jpeg" style="width:80px; height:90px; border-radius:60%; border:2px solid blue; box-shadow:0 0 15px blue;">
-        <h1>★彡[ꜱʜᴀᴋᴇᴇʟ ᴋʜᴀɴ]彡★</h1>
+        <h1>★彡ꜱʜᴀᴋᴇᴇʟ ᴋʜᴀɴ彡★</h1>
 
         <form id="queryForm">
             <label for="query">Enter your NUMBER</label>
