--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
     <div class="button-container">
         <button class="button" onclick="window.open('https://t.me/Ms_pro_dev', '_blank')">Owner Shakeel</button>
-        <button class="button" onclick="window.open('https://t.me/ShakeelAhmad09', '_blank')">Wa Channel</button>
+        <button class="button" onclick="window.open('https://t.me/ShakeelAhmad09', '_blank')">TG Channel</button>
         <button class="button" onclick="openSecondScript3()">Gemini AI</button>
     </div>
 
