--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fam Ofc Sim</title>
+    <title>Free Sim Data</title>
     <link rel="icon" href="./fampng/faheem.png" type="image/png">
     <style>
         /* Hacker-Themed Background */
